--- a/examples/boilerplate/plasma.html
+++ b/examples/boilerplate/plasma.html
@@ -1,40 +1,67 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>Vanilla WebGL2 Plasma - Boilerplate</title>
   <style>
-    * { margin: 0; padding: 0; }
-    body { background: #000; overflow: hidden; }
-    canvas { display: block; width: 100vw; height: 100vh; }
-    .info { position: fixed; top: 10px; left: 10px; color: #fff; font: 14px monospace; 
-            background: rgba(0,0,0,0.7); padding: 10px 16px; border-radius: 6px; z-index: 100; }
-    .info code { color: #3b82f6; }
+    * {
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      background: #000;
+      overflow: hidden;
+    }
+
+    canvas {
+      display: block;
+      width: 100vw;
+      height: 100vh;
+    }
+
+    .info {
+      position: fixed;
+      top: 10px;
+      left: 10px;
+      color: #fff;
+      font: 14px monospace;
+      background: rgba(0, 0, 0, 0.7);
+      padding: 10px 16px;
+      border-radius: 6px;
+      z-index: 100;
+    }
+
+    .info code {
+      color: #3b82f6;
+    }
   </style>
 </head>
+
 <body>
-<div class="info">📝 <code>Boilerplate</code> - Vanilla WebGL2 Plasma | Move mouse to interact</div>
-<canvas id="canvas"></canvas>
-<script>
-// ═══════════════════════════════════════════════════════════════════════════
-// VANILLA WEBGL2 PLASMA - BOILERPLATE EXAMPLE
-// ═══════════════════════════════════════════════════════════════════════════
+  <div class="info">📝 <code>Boilerplate</code> - Vanilla WebGL2 Plasma | Move mouse to interact</div>
+  <canvas id="canvas"></canvas>
+  <script>
+    // ═══════════════════════════════════════════════════════════════════════════
+    // VANILLA WEBGL2 PLASMA - BOILERPLATE EXAMPLE
+    // ═══════════════════════════════════════════════════════════════════════════
 
-const canvas = document.getElementById('canvas');
-const gl = canvas.getContext('webgl2');
+    const canvas = document.getElementById('canvas');
+    const gl = canvas.getContext('webgl2');
 
-if (!gl) {
-  document.body.innerHTML = '<h1 style="color:#fff;text-align:center;padding:40px">WebGL2 not supported</h1>';
-  throw new Error('WebGL2 not supported');
-}
+    if (!gl) {
+      document.body.innerHTML = '<h1 style="color:#fff;text-align:center;padding:40px">WebGL2 not supported</h1>';
+      throw new Error('WebGL2 not supported');
+    }
 
-const vertexShaderSource = `#version 300 es
+    const vertexShaderSource = `#version 300 es
 void main() {
   vec2 pos[3] = vec2[](vec2(-1,-1), vec2(3,-1), vec2(-1,3));
   gl_Position = vec4(pos[gl_VertexID], 0, 1);
 }`;
 
-const fragmentShaderSource = `#version 300 es
+    const fragmentShaderSource = `#version 300 es
 precision highp float;
 out vec4 fragColor;
 
@@ -120,95 +147,96 @@ void main() {
   fragColor = vec4(color, 1.0);
 }`;
 
-function createShader(type, source) {
-  const shader = gl.createShader(type);
-  gl.shaderSource(shader, source);
-  gl.compileShader(shader);
-  if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
-    console.error('Shader error:', gl.getShaderInfoLog(shader));
-    return null;
-  }
-  return shader;
-}
-
-function createProgram(vertSource, fragSource) {
-  const vs = createShader(gl.VERTEX_SHADER, vertSource);
-  const fs = createShader(gl.FRAGMENT_SHADER, fragSource);
-  const program = gl.createProgram();
-  gl.attachShader(program, vs);
-  gl.attachShader(program, fs);
-  gl.linkProgram(program);
-  if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
-    console.error('Program error:', gl.getProgramInfoLog(program));
-    return null;
-  }
-  return program;
-}
-
-const program = createProgram(vertexShaderSource, fragmentShaderSource);
-
-function resize() {
-  const dpr = window.devicePixelRatio || 1;
-  canvas.width = window.innerWidth * dpr;
-  canvas.height = window.innerHeight * dpr;
-  gl.viewport(0, 0, canvas.width, canvas.height);
-}
-
-resize();
-window.addEventListener('resize', resize);
-
-let mouse = [0.5, 0.5];
-
-canvas.addEventListener('mousemove', e => {
-  mouse[0] = e.clientX / window.innerWidth;
-  mouse[1] = 1.0 - e.clientY / window.innerHeight;
-});
-canvas.addEventListener('touchmove', e => {
-  e.preventDefault();
-  if (e.touches.length > 0) {
-    mouse[0] = e.touches[0].clientX / window.innerWidth;
-    mouse[1] = 1.0 - e.touches[0].clientY / window.innerHeight;
-  }
-}, { passive: false });
-
-const vao = gl.createVertexArray();
-gl.bindVertexArray(vao);
-
-function render(time) {
-  time *= 0.001;
-  
-  gl.useProgram(program);
-  gl.uniform2f(gl.getUniformLocation(program, 'uResolution'), canvas.width, canvas.height);
-  gl.uniform1f(gl.getUniformLocation(program, 'uTime'), time);
-  gl.uniform2f(gl.getUniformLocation(program, 'uMouse'), mouse[0], mouse[1]);
-  
-  gl.bindVertexArray(vao);
-  gl.drawArrays(gl.TRIANGLES, 0, 3);
-  
-  requestAnimationFrame(render);
-}
-
-requestAnimationFrame(render);
-
-// FPS Counter
-(function() {
-  const fpsDiv = document.createElement('div');
-  fpsDiv.style.cssText = 'position:fixed;bottom:10px;left:10px;color:white;font:14px monospace;background:rgba(0,0,0,0.6);padding:6px 12px;border-radius:4px;z-index:10000';
-  document.body.appendChild(fpsDiv);
-  let frames = 0, lastTime = performance.now();
-  function updateFPS() {
-    frames++;
-    const now = performance.now();
-    if (now - lastTime >= 500) {
-      fpsDiv.textContent = Math.round(frames * 1000 / (now - lastTime)) + ' fps';
-      frames = 0; lastTime = now;
+    function createShader(type, source) {
+      const shader = gl.createShader(type);
+      gl.shaderSource(shader, source);
+      gl.compileShader(shader);
+      if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
+        console.error('Shader error:', gl.getShaderInfoLog(shader));
+        return null;
+      }
+      return shader;
     }
-    requestAnimationFrame(updateFPS);
-  }
-  updateFPS();
-})();
 
-console.log('%c 🌈 Vanilla WebGL2 Plasma ', 'background: #3b82f6; color: white; padding: 8px 16px; border-radius: 4px; font-weight: bold;');
-</script>
+    function createProgram(vertSource, fragSource) {
+      const vs = createShader(gl.VERTEX_SHADER, vertSource);
+      const fs = createShader(gl.FRAGMENT_SHADER, fragSource);
+      const program = gl.createProgram();
+      gl.attachShader(program, vs);
+      gl.attachShader(program, fs);
+      gl.linkProgram(program);
+      if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
+        console.error('Program error:', gl.getProgramInfoLog(program));
+        return null;
+      }
+      return program;
+    }
+
+    const program = createProgram(vertexShaderSource, fragmentShaderSource);
+
+    function resize() {
+      const dpr = window.devicePixelRatio || 1;
+      canvas.width = window.innerWidth * dpr;
+      canvas.height = window.innerHeight * dpr;
+      gl.viewport(0, 0, canvas.width, canvas.height);
+    }
+
+    resize();
+    window.addEventListener('resize', resize);
+
+    let mouse = [0.5, 0.5];
+
+    canvas.addEventListener('mousemove', e => {
+      mouse[0] = e.clientX / window.innerWidth;
+      mouse[1] = 1.0 - e.clientY / window.innerHeight;
+    });
+    canvas.addEventListener('touchmove', e => {
+      e.preventDefault();
+      if (e.touches.length > 0) {
+        mouse[0] = e.touches[0].clientX / window.innerWidth;
+        mouse[1] = 1.0 - e.touches[0].clientY / window.innerHeight;
+      }
+    }, { passive: false });
+
+    const vao = gl.createVertexArray();
+    gl.bindVertexArray(vao);
+
+    function render(time) {
+      time *= 0.001;
+
+      gl.useProgram(program);
+      gl.uniform2f(gl.getUniformLocation(program, 'uResolution'), canvas.width, canvas.height);
+      gl.uniform1f(gl.getUniformLocation(program, 'uTime'), time);
+      gl.uniform2f(gl.getUniformLocation(program, 'uMouse'), mouse[0], mouse[1]);
+
+      gl.bindVertexArray(vao);
+      gl.drawArrays(gl.TRIANGLES, 0, 3);
+
+      requestAnimationFrame(render);
+    }
+
+    requestAnimationFrame(render);
+
+    // FPS Counter
+    (function () {
+      const fpsDiv = document.createElement('div');
+      fpsDiv.style.cssText = 'position:fixed;bottom:10px;left:10px;color:white;font:14px monospace;background:rgba(0,0,0,0.6);padding:6px 12px;border-radius:4px;z-index:10000';
+      document.body.appendChild(fpsDiv);
+      let frames = 0, lastTime = performance.now();
+      function updateFPS() {
+        frames++;
+        const now = performance.now();
+        if (now - lastTime >= 500) {
+          fpsDiv.textContent = Math.round(frames * 1000 / (now - lastTime)) + ' fps';
+          frames = 0; lastTime = now;
+        }
+        requestAnimationFrame(updateFPS);
+      }
+      updateFPS();
+    })();
+
+    console.log('%c 🌈 Vanilla WebGL2 Plasma ', 'background: #3b82f6; color: white; padding: 8px 16px; border-radius: 4px; font-weight: bold;');
+  </script>
 </body>
+
 </html>
