--- a/examples/boilerplate/smoke.html
+++ b/examples/boilerplate/smoke.html
@@ -1,42 +1,69 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>Vanilla WebGL2 Smoke - Boilerplate</title>
   <style>
-    * { margin: 0; padding: 0; }
-    body { background: #000; overflow: hidden; }
-    canvas { display: block; width: 100vw; height: 100vh; }
-    .info { position: fixed; top: 10px; left: 10px; color: #fff; font: 14px monospace; 
-            background: rgba(0,0,0,0.7); padding: 10px 16px; border-radius: 6px; z-index: 100; }
-    .info code { color: #3b82f6; }
+    * {
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      background: #000;
+      overflow: hidden;
+    }
+
+    canvas {
+      display: block;
+      width: 100vw;
+      height: 100vh;
+    }
+
+    .info {
+      position: fixed;
+      top: 10px;
+      left: 10px;
+      color: #fff;
+      font: 14px monospace;
+      background: rgba(0, 0, 0, 0.7);
+      padding: 10px 16px;
+      border-radius: 6px;
+      z-index: 100;
+    }
+
+    .info code {
+      color: #3b82f6;
+    }
   </style>
 </head>
+
 <body>
-<div class="info">📝 <code>Boilerplate</code> - Vanilla WebGL2 Smoke | Click & drag to emit smoke</div>
-<canvas id="canvas"></canvas>
-<script>
-// ═══════════════════════════════════════════════════════════════════════════
-// VANILLA WEBGL2 SMOKE - BOILERPLATE EXAMPLE
-// ═══════════════════════════════════════════════════════════════════════════
+  <div class="info">📝 <code>Boilerplate</code> - Vanilla WebGL2 Smoke | Click & drag to emit smoke</div>
+  <canvas id="canvas"></canvas>
+  <script>
+    // ═══════════════════════════════════════════════════════════════════════════
+    // VANILLA WEBGL2 SMOKE - BOILERPLATE EXAMPLE
+    // ═══════════════════════════════════════════════════════════════════════════
 
-const canvas = document.getElementById('canvas');
-const gl = canvas.getContext('webgl2');
+    const canvas = document.getElementById('canvas');
+    const gl = canvas.getContext('webgl2');
 
-if (!gl) {
-  document.body.innerHTML = '<h1 style="color:#fff;text-align:center;padding:40px">WebGL2 not supported</h1>';
-  throw new Error('WebGL2 not supported');
-}
+    if (!gl) {
+      document.body.innerHTML = '<h1 style="color:#fff;text-align:center;padding:40px">WebGL2 not supported</h1>';
+      throw new Error('WebGL2 not supported');
+    }
 
-gl.getExtension('EXT_color_buffer_float');
+    gl.getExtension('EXT_color_buffer_float');
 
-const vertexShaderSource = `#version 300 es
+    const vertexShaderSource = `#version 300 es
 void main() {
   vec2 pos[3] = vec2[](vec2(-1,-1), vec2(3,-1), vec2(-1,3));
   gl_Position = vec4(pos[gl_VertexID], 0, 1);
 }`;
 
-const simulationFragSource = `#version 300 es
+    const simulationFragSource = `#version 300 es
 precision highp float;
 out vec4 fragColor;
 
@@ -175,7 +202,7 @@ void main() {
   );
 }`;
 
-const displayFragSource = `#version 300 es
+    const displayFragSource = `#version 300 es
 precision highp float;
 out vec4 fragColor;
 
@@ -236,157 +263,158 @@ void main() {
   fragColor = vec4(color, 1.0);
 }`;
 
-// Shader helpers
-function createShader(type, source) {
-  const shader = gl.createShader(type);
-  gl.shaderSource(shader, source);
-  gl.compileShader(shader);
-  if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
-    console.error('Shader error:', gl.getShaderInfoLog(shader));
-    return null;
-  }
-  return shader;
-}
-
-function createProgram(vertSource, fragSource) {
-  const vs = createShader(gl.VERTEX_SHADER, vertSource);
-  const fs = createShader(gl.FRAGMENT_SHADER, fragSource);
-  const program = gl.createProgram();
-  gl.attachShader(program, vs);
-  gl.attachShader(program, fs);
-  gl.linkProgram(program);
-  if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
-    console.error('Program error:', gl.getProgramInfoLog(program));
-    return null;
-  }
-  return program;
-}
-
-const simProgram = createProgram(vertexShaderSource, simulationFragSource);
-const displayProgram = createProgram(vertexShaderSource, displayFragSource);
-
-let width, height;
-let fboA, fboB, texA, texB;
-
-function createFBO(w, h) {
-  const tex = gl.createTexture();
-  gl.bindTexture(gl.TEXTURE_2D, tex);
-  gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA16F, w, h, 0, gl.RGBA, gl.HALF_FLOAT, null);
-  gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.LINEAR);
-  gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MAG_FILTER, gl.LINEAR);
-  gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_S, gl.CLAMP_TO_EDGE);
-  gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_T, gl.CLAMP_TO_EDGE);
-  
-  const fb = gl.createFramebuffer();
-  gl.bindFramebuffer(gl.FRAMEBUFFER, fb);
-  gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.TEXTURE_2D, tex, 0);
-  
-  return { fb, tex };
-}
-
-function resize() {
-  const dpr = window.devicePixelRatio || 1;
-  width = Math.floor(window.innerWidth * dpr * 0.5);
-  height = Math.floor(window.innerHeight * dpr * 0.5);
-  canvas.width = window.innerWidth * dpr;
-  canvas.height = window.innerHeight * dpr;
-  
-  const a = createFBO(width, height);
-  const b = createFBO(width, height);
-  fboA = a.fb; texA = a.tex;
-  fboB = b.fb; texB = b.tex;
-}
-
-resize();
-window.addEventListener('resize', resize);
-
-let mouse = [0.5, 0.5];
-let prevMouse = [0.5, 0.5];
-let mouseDown = false;
-
-canvas.addEventListener('mousemove', e => {
-  prevMouse = [...mouse];
-  mouse[0] = e.clientX / window.innerWidth;
-  mouse[1] = 1.0 - e.clientY / window.innerHeight;
-});
-canvas.addEventListener('mousedown', () => mouseDown = true);
-canvas.addEventListener('mouseup', () => mouseDown = false);
-canvas.addEventListener('touchmove', e => {
-  e.preventDefault();
-  if (e.touches.length > 0) {
-    prevMouse = [...mouse];
-    mouse[0] = e.touches[0].clientX / window.innerWidth;
-    mouse[1] = 1.0 - e.touches[0].clientY / window.innerHeight;
-  }
-}, { passive: false });
-canvas.addEventListener('touchstart', () => mouseDown = true);
-canvas.addEventListener('touchend', () => mouseDown = false);
-
-const vao = gl.createVertexArray();
-gl.bindVertexArray(vao);
-
-function render(time) {
-  time *= 0.001;
-  
-  // Simulation pass
-  gl.bindFramebuffer(gl.FRAMEBUFFER, fboB);
-  gl.viewport(0, 0, width, height);
-  gl.useProgram(simProgram);
-  
-  gl.uniform2f(gl.getUniformLocation(simProgram, 'uResolution'), width, height);
-  gl.uniform1f(gl.getUniformLocation(simProgram, 'uTime'), time);
-  gl.uniform2f(gl.getUniformLocation(simProgram, 'uMouse'), mouse[0], mouse[1]);
-  gl.uniform2f(gl.getUniformLocation(simProgram, 'uPrevMouse'), prevMouse[0], prevMouse[1]);
-  gl.uniform1f(gl.getUniformLocation(simProgram, 'uMouseDown'), mouseDown ? 1 : 0);
-  
-  gl.activeTexture(gl.TEXTURE0);
-  gl.bindTexture(gl.TEXTURE_2D, texA);
-  gl.uniform1i(gl.getUniformLocation(simProgram, 'uState'), 0);
-  
-  gl.bindVertexArray(vao);
-  gl.drawArrays(gl.TRIANGLES, 0, 3);
-  
-  [fboA, fboB] = [fboB, fboA];
-  [texA, texB] = [texB, texA];
-  
-  // Display pass
-  gl.bindFramebuffer(gl.FRAMEBUFFER, null);
-  gl.viewport(0, 0, canvas.width, canvas.height);
-  gl.useProgram(displayProgram);
-  
-  gl.uniform2f(gl.getUniformLocation(displayProgram, 'uResolution'), canvas.width, canvas.height);
-  gl.uniform1f(gl.getUniformLocation(displayProgram, 'uTime'), time);
-  
-  gl.activeTexture(gl.TEXTURE0);
-  gl.bindTexture(gl.TEXTURE_2D, texA);
-  gl.uniform1i(gl.getUniformLocation(displayProgram, 'uState'), 0);
-  
-  gl.drawArrays(gl.TRIANGLES, 0, 3);
-  
-  requestAnimationFrame(render);
-}
-
-requestAnimationFrame(render);
-
-// FPS Counter
-(function() {
-  const fpsDiv = document.createElement('div');
-  fpsDiv.style.cssText = 'position:fixed;bottom:10px;left:10px;color:white;font:14px monospace;background:rgba(0,0,0,0.6);padding:6px 12px;border-radius:4px;z-index:10000';
-  document.body.appendChild(fpsDiv);
-  let frames = 0, lastTime = performance.now();
-  function updateFPS() {
-    frames++;
-    const now = performance.now();
-    if (now - lastTime >= 500) {
-      fpsDiv.textContent = Math.round(frames * 1000 / (now - lastTime)) + ' fps';
-      frames = 0; lastTime = now;
+    // Shader helpers
+    function createShader(type, source) {
+      const shader = gl.createShader(type);
+      gl.shaderSource(shader, source);
+      gl.compileShader(shader);
+      if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
+        console.error('Shader error:', gl.getShaderInfoLog(shader));
+        return null;
+      }
+      return shader;
     }
-    requestAnimationFrame(updateFPS);
-  }
-  updateFPS();
-})();
 
-console.log('%c 💨 Vanilla WebGL2 Smoke ', 'background: #3b82f6; color: white; padding: 8px 16px; border-radius: 4px; font-weight: bold;');
-</script>
+    function createProgram(vertSource, fragSource) {
+      const vs = createShader(gl.VERTEX_SHADER, vertSource);
+      const fs = createShader(gl.FRAGMENT_SHADER, fragSource);
+      const program = gl.createProgram();
+      gl.attachShader(program, vs);
+      gl.attachShader(program, fs);
+      gl.linkProgram(program);
+      if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
+        console.error('Program error:', gl.getProgramInfoLog(program));
+        return null;
+      }
+      return program;
+    }
+
+    const simProgram = createProgram(vertexShaderSource, simulationFragSource);
+    const displayProgram = createProgram(vertexShaderSource, displayFragSource);
+
+    let width, height;
+    let fboA, fboB, texA, texB;
+
+    function createFBO(w, h) {
+      const tex = gl.createTexture();
+      gl.bindTexture(gl.TEXTURE_2D, tex);
+      gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA16F, w, h, 0, gl.RGBA, gl.HALF_FLOAT, null);
+      gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.LINEAR);
+      gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MAG_FILTER, gl.LINEAR);
+      gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_S, gl.CLAMP_TO_EDGE);
+      gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_T, gl.CLAMP_TO_EDGE);
+
+      const fb = gl.createFramebuffer();
+      gl.bindFramebuffer(gl.FRAMEBUFFER, fb);
+      gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.TEXTURE_2D, tex, 0);
+
+      return { fb, tex };
+    }
+
+    function resize() {
+      const dpr = window.devicePixelRatio || 1;
+      width = Math.floor(window.innerWidth * dpr * 0.5);
+      height = Math.floor(window.innerHeight * dpr * 0.5);
+      canvas.width = window.innerWidth * dpr;
+      canvas.height = window.innerHeight * dpr;
+
+      const a = createFBO(width, height);
+      const b = createFBO(width, height);
+      fboA = a.fb; texA = a.tex;
+      fboB = b.fb; texB = b.tex;
+    }
+
+    resize();
+    window.addEventListener('resize', resize);
+
+    let mouse = [0.5, 0.5];
+    let prevMouse = [0.5, 0.5];
+    let mouseDown = false;
+
+    canvas.addEventListener('mousemove', e => {
+      prevMouse = [...mouse];
+      mouse[0] = e.clientX / window.innerWidth;
+      mouse[1] = 1.0 - e.clientY / window.innerHeight;
+    });
+    canvas.addEventListener('mousedown', () => mouseDown = true);
+    canvas.addEventListener('mouseup', () => mouseDown = false);
+    canvas.addEventListener('touchmove', e => {
+      e.preventDefault();
+      if (e.touches.length > 0) {
+        prevMouse = [...mouse];
+        mouse[0] = e.touches[0].clientX / window.innerWidth;
+        mouse[1] = 1.0 - e.touches[0].clientY / window.innerHeight;
+      }
+    }, { passive: false });
+    canvas.addEventListener('touchstart', () => mouseDown = true);
+    canvas.addEventListener('touchend', () => mouseDown = false);
+
+    const vao = gl.createVertexArray();
+    gl.bindVertexArray(vao);
+
+    function render(time) {
+      time *= 0.001;
+
+      // Simulation pass
+      gl.bindFramebuffer(gl.FRAMEBUFFER, fboB);
+      gl.viewport(0, 0, width, height);
+      gl.useProgram(simProgram);
+
+      gl.uniform2f(gl.getUniformLocation(simProgram, 'uResolution'), width, height);
+      gl.uniform1f(gl.getUniformLocation(simProgram, 'uTime'), time);
+      gl.uniform2f(gl.getUniformLocation(simProgram, 'uMouse'), mouse[0], mouse[1]);
+      gl.uniform2f(gl.getUniformLocation(simProgram, 'uPrevMouse'), prevMouse[0], prevMouse[1]);
+      gl.uniform1f(gl.getUniformLocation(simProgram, 'uMouseDown'), mouseDown ? 1 : 0);
+
+      gl.activeTexture(gl.TEXTURE0);
+      gl.bindTexture(gl.TEXTURE_2D, texA);
+      gl.uniform1i(gl.getUniformLocation(simProgram, 'uState'), 0);
+
+      gl.bindVertexArray(vao);
+      gl.drawArrays(gl.TRIANGLES, 0, 3);
+
+      [fboA, fboB] = [fboB, fboA];
+      [texA, texB] = [texB, texA];
+
+      // Display pass
+      gl.bindFramebuffer(gl.FRAMEBUFFER, null);
+      gl.viewport(0, 0, canvas.width, canvas.height);
+      gl.useProgram(displayProgram);
+
+      gl.uniform2f(gl.getUniformLocation(displayProgram, 'uResolution'), canvas.width, canvas.height);
+      gl.uniform1f(gl.getUniformLocation(displayProgram, 'uTime'), time);
+
+      gl.activeTexture(gl.TEXTURE0);
+      gl.bindTexture(gl.TEXTURE_2D, texA);
+      gl.uniform1i(gl.getUniformLocation(displayProgram, 'uState'), 0);
+
+      gl.drawArrays(gl.TRIANGLES, 0, 3);
+
+      requestAnimationFrame(render);
+    }
+
+    requestAnimationFrame(render);
+
+    // FPS Counter
+    (function () {
+      const fpsDiv = document.createElement('div');
+      fpsDiv.style.cssText = 'position:fixed;bottom:10px;left:10px;color:white;font:14px monospace;background:rgba(0,0,0,0.6);padding:6px 12px;border-radius:4px;z-index:10000';
+      document.body.appendChild(fpsDiv);
+      let frames = 0, lastTime = performance.now();
+      function updateFPS() {
+        frames++;
+        const now = performance.now();
+        if (now - lastTime >= 500) {
+          fpsDiv.textContent = Math.round(frames * 1000 / (now - lastTime)) + ' fps';
+          frames = 0; lastTime = now;
+        }
+        requestAnimationFrame(updateFPS);
+      }
+      updateFPS();
+    })();
+
+    console.log('%c 💨 Vanilla WebGL2 Smoke ', 'background: #3b82f6; color: white; padding: 8px 16px; border-radius: 4px; font-weight: bold;');
+  </script>
 </body>
+
 </html>
