--- a/examples/gpu/plasma.html
+++ b/examples/gpu/plasma.html
@@ -1,34 +1,38 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>mushu — WebGPU Plasma Demo</title>
   <link rel="stylesheet" href="../common.css">
   <style>
-    .info code { color: #ff44ff; }
+    .info code {
+      color: #ff44ff;
+    }
   </style>
 </head>
+
 <body>
-<div class="info">⚡ <code>mushu().gpu(compute, render)</code> Plasma | WebGPU Function API</div>
-<canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
-<script type="module">
-import { mushu } from '../../src/index.js';
+  <div class="info">⚡ <code>mushu().gpu(compute, render)</code> Plasma | WebGPU Function API</div>
+  <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
+  <script type="module">
+    import { mushu } from '../../src/index.js';
 
-// ═══════════════════════════════════════════════════════════════════════════
-// WebGPU Advanced Plasma Effect
-// 
-// Features:
-//   • Multi-frequency sinusoidal interference patterns
-//   • Perlin noise-based distortion
-//   • Dynamic color palette with gradient shifts
-//   • Mouse-interactive energy waves
-//   • Bloom and glow effects
-//   • Pulsing energy core
-// 
-// Move mouse to influence the plasma! Click for energy burst!
-// ═══════════════════════════════════════════════════════════════════════════
+    // ═══════════════════════════════════════════════════════════════════════════
+    // WebGPU Advanced Plasma Effect
+    // 
+    // Features:
+    //   • Multi-frequency sinusoidal interference patterns
+    //   • Perlin noise-based distortion
+    //   • Dynamic color palette with gradient shifts
+    //   • Mouse-interactive energy waves
+    //   • Bloom and glow effects
+    //   • Pulsing energy core
+    // 
+    // Move mouse to influence the plasma! Click for energy burst!
+    // ═══════════════════════════════════════════════════════════════════════════
 
-mushu('#c').gpu(
+    mushu('#c').gpu(
   // Compute shader - Plasma state
   /* wgsl */`
     fn hash(p: vec2<f32>) -> f32 {
@@ -123,7 +127,7 @@ mushu('#c').gpu(
       textureStore(dst, C, vec4<f32>(v, u.mouseX, u.mouseY, glow));
     }
   `,
-  
+
   // Render shader - Advanced plasma coloring
   /* wgsl */`
     fn palette(t: f32, a: vec3<f32>, b: vec3<f32>, c: vec3<f32>, d: vec3<f32>) -> vec3<f32> {
@@ -218,46 +222,47 @@ mushu('#c').gpu(
       return vec4<f32>(col, 1.0);
     }
   `,
-  { canvas: document.getElementById('c'), scale: 1.0 }
-);
+      { canvas: document.getElementById('c'), scale: 1.0 }
+    );
 
-// FPS Counter
-(function() {
-  const fpsDiv = document.createElement('div');
-  fpsDiv.style.cssText = 'position:fixed;bottom:10px;left:10px;color:white;font:14px monospace;background:rgba(0,0,0,0.6);padding:6px 12px;border-radius:4px;z-index:10000';
-  document.body.appendChild(fpsDiv);
-  let frames = 0, lastTime = performance.now();
-  function updateFPS() {
-    frames++;
-    const now = performance.now();
-    if (now - lastTime >= 500) {
-      fpsDiv.textContent = Math.round(frames * 1000 / (now - lastTime)) + ' fps';
-      frames = 0; lastTime = now;
-    }
-    requestAnimationFrame(updateFPS);
-  }
-  updateFPS();
-})();
+    // FPS Counter
+    (function () {
+      const fpsDiv = document.createElement('div');
+      fpsDiv.style.cssText = 'position:fixed;bottom:10px;left:10px;color:white;font:14px monospace;background:rgba(0,0,0,0.6);padding:6px 12px;border-radius:4px;z-index:10000';
+      document.body.appendChild(fpsDiv);
+      let frames = 0, lastTime = performance.now();
+      function updateFPS() {
+        frames++;
+        const now = performance.now();
+        if (now - lastTime >= 500) {
+          fpsDiv.textContent = Math.round(frames * 1000 / (now - lastTime)) + ' fps';
+          frames = 0; lastTime = now;
+        }
+        requestAnimationFrame(updateFPS);
+      }
+      updateFPS();
+    })();
 
-console.log('%c 🌈 mushu WebGPU Plasma Ready ', 'background: linear-gradient(90deg, #ff00ff, #00ffff, #ff00ff); color: white; padding: 8px 16px; border-radius: 4px; font-weight: bold;');
-console.log('Move mouse to influence plasma. Click for energy burst!');
-</script>
-<script>
-// Hide home-link if in iframe - run immediately and on load
-function hideIfIframe() {
-  if (window.self !== window.top) {
-    const link = document.querySelector('.home-link');
-    if (link) {
-      link.style.display = 'none';
+    console.log('%c 🌈 mushu WebGPU Plasma Ready ', 'background: linear-gradient(90deg, #ff00ff, #00ffff, #ff00ff); color: white; padding: 8px 16px; border-radius: 4px; font-weight: bold;');
+    console.log('Move mouse to influence plasma. Click for energy burst!');
+  </script>
+  <script>
+    // Hide home-link if in iframe - run immediately and on load
+    function hideIfIframe() {
+      if (window.self !== window.top) {
+        const link = document.querySelector('.home-link');
+        if (link) {
+          link.style.display = 'none';
+        }
+      }
     }
-  }
-}
-if (document.readyState === 'loading') {
-  document.addEventListener('DOMContentLoaded', hideIfIframe);
-} else {
-  hideIfIframe();
-}
-</script>
-<a href="index.html" class="home-link">← Back to Index</a>
+    if (document.readyState === 'loading') {
+      document.addEventListener('DOMContentLoaded', hideIfIframe);
+    } else {
+      hideIfIframe();
+    }
+  </script>
+  <a href="index.html" class="home-link">← Back to Index</a>
 </body>
+
 </html>
