updating demos and gpu fix

--- a/examples/3d/cube.html
+++ b/examples/3d/cube.html
@@ -38,7 +38,7 @@
       clear,
       mat4,
       fps
-    } from '../../src/core/index.js';
+    } from '/src/core/index.js';
 
     // Custom 3D shader
     const vertexShader = /* glsl */`#version 300 es
