--- a/examples/3d/pbr-sphere.html
+++ b/examples/3d/pbr-sphere.html
@@ -87,8 +87,8 @@
       clear,
       mat4,
       fps
-    } from '../../src/core/index.js';
-    import { pbr } from '../../src/glsl/index.js';
+    } from '/src/core/index.js';
+    import { pbr } from '/src/glsl/index.js';
 
     // Material state
     const material = {
