--- a/examples/3d/textured-torus.html
+++ b/examples/3d/textured-torus.html
@@ -53,7 +53,7 @@
       clear,
       mat4,
       fps
-    } from '../../src/core/index.js';
+    } from '/src/core/index.js';
 
     // Custom textured shader
     const vertexShader = /* glsl */`#version 300 es
