--- a/examples/glsl/smoke.html
+++ b/examples/glsl/smoke.html
@@ -11,7 +11,7 @@
   <div class="info">🎨 <code>mushu().gl()</code> Smoke | Move mouse to interact</div>
   <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
   <script type="module">
-    import { mushu } from '../../src/index.js';
+    import { mushu } from '/src/index.js';
 
     // ═══════════════════════════════════════════════════════════════════════════
     // GLSL Helper - Simple Shader-Only Volumetric Smoke
