--- a/examples/flow-glsl/fire.html
+++ b/examples/flow-glsl/fire.html
@@ -63,7 +63,7 @@
   <div class="info">🔥 <code>mushu().gl().flow()</code> Fire | Move mouse to interact</div>
   <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
   <script type="module">
-    import { mushu, shader, fps } from '../../src/index.js';
+    import { mushu, shader, fps } from '/src/index.js';
 
     // ═══════════════════════════════════════════════════════════════════════════
     // mushu Flow Fire - Procedural Flames (WebGL2)
