--- a/examples/flow-glsl/smoke.html
+++ b/examples/flow-glsl/smoke.html
@@ -63,7 +63,7 @@
   <div class="info">💨 <code>mushu().gl().flow()</code> Smoke | Move mouse to interact</div>
   <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
   <script type="module">
-    import { mushu, shader, fps } from '../../src/index.js';
+    import { mushu, shader, fps } from '/src/index.js';
 
     // ═══════════════════════════════════════════════════════════════════════════
     // YO Smoke - Procedural Volumetric Smoke (WebGL2)
