--- a/examples/flow-gpu/fire.html
+++ b/examples/flow-gpu/fire.html
@@ -63,7 +63,7 @@
   <div class="info">🔥 <code>mushu().gpu().flow()</code> Candle Flame | Move mouse to position flame</div>
   <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
   <script type="module">
-    import { mushu } from '../../src/index.js';
+    import { mushu } from '/src/index.js';
 
     // ═══════════════════════════════════════════════════════════════════════════
     // YOGPU Candle Flame - Interactive flame that follows mouse
