--- a/examples/flow-gpu/plasma.html
+++ b/examples/flow-gpu/plasma.html
@@ -63,7 +63,7 @@
   <div class="info">⚡ <code>mushu().gpu().flow()</code> Plasma | WebGPU Fluent API</div>
   <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
   <script type="module">
-    import { mushu } from '../../src/index.js';
+    import { mushu } from '/src/index.js';
 
     // ═══════════════════════════════════════════════════════════════════════════
     // YOGPU Advanced Plasma Effect (WebGPU Fluent API)
