--- a/examples/flow-gpu/smoke.html
+++ b/examples/flow-gpu/smoke.html
@@ -63,7 +63,7 @@
   <div class="info">💨 <code>mushu().gpu().flow()</code> Match Smoke | Move mouse - smoke trails from cursor</div>
   <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
   <script type="module">
-    import { mushu } from '../../src/index.js';
+    import { mushu } from '/src/index.js';
 
     // ═══════════════════════════════════════════════════════════════════════════
     // YOGPU Match Smoke - Smoke emits from mouse cursor like a match
