--- a/examples/glsl/water.html
+++ b/examples/glsl/water.html
@@ -16,7 +16,7 @@
   <div class="info">🎨 <code>mushu().gl()</code> Water | Move mouse to interact</div>
   <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
   <script type="module">
-    import { mushu } from '../../src/index.js';
+    import { mushu } from '/src/index.js';
 
     // ═══════════════════════════════════════════════════════════════════════════
     // GL Helper - Simple Shader-Only Ocean Water Effect
