--- a/examples/gpu/fire.html
+++ b/examples/gpu/fire.html
@@ -16,7 +16,7 @@
   <div class="info">🔥 <code>mushu().gpu(compute, render)</code> Candle Flame | Move mouse to position flame</div>
   <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
   <script type="module">
-    import { mushu } from '../../src/index.js';
+    import { mushu } from '/src/index.js';
 
     // ═══════════════════════════════════════════════════════════════════════════
     // WebGPU Candle Flame - Interactive flame that follows mouse
