--- a/examples/gpu/plasma.html
+++ b/examples/gpu/plasma.html
@@ -16,7 +16,7 @@
   <div class="info">⚡ <code>mushu().gpu(compute, render)</code> Plasma | WebGPU Function API</div>
   <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
   <script type="module">
-    import { mushu } from '../../src/index.js';
+    import { mushu } from '/src/index.js';
 
     // ═══════════════════════════════════════════════════════════════════════════
     // WebGPU Advanced Plasma Effect
