--- a/examples/gpu/smoke.html
+++ b/examples/gpu/smoke.html
@@ -17,7 +17,7 @@
   </div>
   <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
   <script type="module">
-    import { mushu } from '../../src/index.js';
+    import { mushu } from '/src/index.js';
 
     // ═══════════════════════════════════════════════════════════════════════════
     // WebGPU Match Smoke - Smoke emits from mouse cursor like a match
