--- a/examples/gpu/water.html
+++ b/examples/gpu/water.html
@@ -11,7 +11,7 @@
   <div class="info">🌊 <code>mushu().gpu(compute, render)</code> Water | WebGPU Function API</div>
   <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
   <script type="module">
-    import { mushu } from '../../src/index.js';
+    import { mushu } from '/src/index.js';
 
     // ═══════════════════════════════════════════════════════════════════════════
     // WebGPU Advanced Water Ripple Simulation
