--- a/examples/index.html
+++ b/examples/index.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>🍡 mushu - Creative Coding Made Simple</title>
-  <link rel="stylesheet" href="./index.css">
-  <link rel="stylesheet" href="./support.css">
+  <link rel="stylesheet" href="/examples/index.css">
+  <link rel="stylesheet" href="/examples/support.css">
 </head>
 
 <body>
