--- a/examples/index.html
+++ b/examples/index.html
@@ -162,6 +162,7 @@
         <div class="item"><span class="dot flow"></span> mushu().gl().flow()</div>
         <div class="item"><span class="dot gpuFlow"></span> mushu().gpu().flow()</div>
         <div class="item"><span class="dot 3d"></span> 3D (Geometry/Textures)</div>
+        <div class="item"><span class="dot scene"></span> Scene Graph</div>
       </div>
 
       <div class="compare-section">
@@ -301,6 +302,25 @@
           <div class="card 3d">
             <h4>🍩 Textured Torus</h4>
             <p>Procedural textures & custom shaders</p><a href="./3d/textured-torus.html">Demo →</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Scene Section -->
+      <div class="section">
+        <h3 class="scene">🎬 Scene Graph Examples <code>mushu('#c').scene()</code></h3>
+        <div class="grid">
+          <div class="card scene">
+            <h4>🎨 Multi-Material</h4>
+            <p>Multiple PBR materials on different objects</p><a href="./scene/multi-material.html">Demo →</a>
+          </div>
+          <div class="card scene">
+            <h4>🔗 Hierarchical Objects</h4>
+            <p>Parent-child relationships (robot arm)</p><a href="./scene/hierarchical.html">Demo →</a>
+          </div>
+          <div class="card scene">
+            <h4>💎 Physical Materials</h4>
+            <p>Glass transmission with live controls</p><a href="./scene/physical-materials.html">Demo →</a>
           </div>
         </div>
       </div>
